@@ -1,0 +1,4 @@
+#!/usr/bin/env bash
+idris $@ GoalQQuote.idr -o quasiquote002
+./quasiquote002
+rm -f quasiquote002 *.ibc
